Add learning algorithm and hyper parameters to report

--- a/banana_navigation/Report.ipynb
+++ b/banana_navigation/Report.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Algorithm: DQN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To solve this task, we used Deep Q-Networks. This deep network uses a neural networks to learn action value functions. So at each timestep, given the state of the environment, whether from gym variables or directly from pixels, the neural net will output a value for each action.\n",
+    "\n",
+    "To play a role using the algorithm, the agent needs only to pick the action with the maximum output value. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Model"
    ]
   },
@@ -27,7 +43,18 @@
     "4. ReLU activation layer\n",
     "5. Linear layer | shape(in = 64, out = 4)\n",
     "\n",
-    "As my first DeepRL project, I actually thought that I will need a much bigger model. Through experiments and multiple runs I found out that even three layers with such a low number of hidden units did the job. "
+    "As my first DeepRL project, I actually thought that I will need a much bigger model. Through experiments and multiple runs I found out that even three layers with such a low number of hidden units did the job. \n",
+    "\n",
+    "**Hyper Parameters**\n",
+    "\n",
+    "BUFFER_SIZE = 10000 sample  # replay buffer size\n",
+    "BATCH_SIZE = 64             # minibatch size\n",
+    "GAMMA = 0.99                # discount factor\n",
+    "TAU = 1e-3                  # for soft update of target parameters\n",
+    "LR = 5e-4                   # learning rate \n",
+    "UPDATE_EVERY = 4            # how often to update the network\n",
+    "\n",
+    "We didn't need to do alot of find tuning for this task as it was solved easily. Varying the learning rate might be benefitial for future experiments."
    ]
   },
   {
@@ -225,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
